--- a/index.html
+++ b/index.html
@@ -3,6 +3,15 @@
 <head>
   <meta charset="UTF-8">
   <title>Newsletter Signup Test Page</title>
+  
+  <!-- Google Tag Manager -->
+  <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+  new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+  j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+  'https://www.googletagmanager.com/gtm.js?id=GTM-MNPJ79LM';f.parentNode.insertBefore(j,f);
+  })(window,document,'script','dataLayer','GTM-MNPJ79LM');</script>
+  <!-- End Google Tag Manager -->
+  
   <style>
     body { font-family: Arial, sans-serif; padding: 50px; }
     .container { max-width: 500px; margin: auto; text-align: center; }
@@ -10,6 +19,12 @@
   </style>
 </head>
 <body>
+  
+  <!-- Google Tag Manager (noscript) -->
+  <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-MNPJ79LM"
+  height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+  <!-- End Google Tag Manager (noscript) -->
+  
   <div class="container">
     <h1>Subscribe to Our Newsletter</h1>
     <p>Stay up to date with the latest updates.</p>
